# lab0b

./: .gitignore  CMakeLists.txt  README.md  test_new_file.sh
.github/workflows/: cmake.yml
Hws/: CMakeLists.txt
Hws/Hw01/: CMakeLists.txt
Hws/Hw01/src/: demo.cpp  main.cpp
Hws/Hw01/test/: TESTING.md
Hws/Hw02/: CMakeLists.txt
Hws/Hw02/src/: demo.cpp  main.cpp
Hws/Hw03/: CMakeLists.txt
Hws/Hw03/src/: demo.cpp  main.cpp
Hws/Hw04/: CMakeLists.txt
Hws/Hw04/src/: demo.cpp  main.cpp
Hws/Hw05/: CMakeLists.txt
Hws/Hw05/src/: demo.cpp  main.cpp
Hws/Hw06/: CMakeLists.txt
Hws/Hw06/src/: demo.cpp  main.cpp
Labs/: CMakeLists.txt
Labs/Lab01/: CMakeLists.txt
Labs/Lab01/src/: main.cpp
Labs/Lab02/: CMakeLists.txt
Labs/Lab02/include/: csc232.h
Labs/Lab02/src/: demo.cpp  main.cpp
Labs/Lab03/: CMakeLists.txt
Labs/Lab03/src/: demo.cpp  main.cpp
Labs/Lab04/: CMakeLists.txt
Labs/Lab04/src/: demo.cpp  main.cpp
Labs/Lab05/: CMakeLists.txt
Labs/Lab05/include/: csc232.h
Labs/Lab05/src/: demo.cpp  main.cpp
Labs/Lab06/: CMakeLists.txt
Labs/Lab06/src/: demo.cpp  main.cpp
Labs/Lab07/: CMakeLists.txt
Labs/Lab07/src/: demo.cpp  main.cpp
Labs/Lab08/: CMakeLists.txt
Labs/Lab08/src/: demo.cpp  main.cpp
Labs/Lab09/: CMakeLists.txt
Labs/Lab09/src/: demo.cpp  main.cpp
Labs/Lab10/: CMakeLists.txt
Labs/Lab10/src/: demo.cpp  main.cpp
Labs/Lab11/: CMakeLists.txt
Labs/Lab11/src/: demo.cpp  main.cpp
Labs/Lab12/: CMakeLists.txt
Labs/Lab12/src/: demo.cpp  main.cpp
src/: Makefile  demo.cpp
