# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("Hws")

# Include sub-projects.
add_subdirectory (Hw01)
add_subdirectory (Hw02)
add_subdirectory (Hw03)
add_subdirectory (Hw04)
add_subdirectory (Hw05)
add_subdirectory (Hw06)
