# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("Labs")

# Include sub-projects.
add_subdirectory (Lab01)
add_subdirectory (Lab02)
add_subdirectory (Lab03)
add_subdirectory (Lab04)
add_subdirectory (Lab05)
add_subdirectory (Lab06)
add_subdirectory (Lab07)
add_subdirectory (Lab08)
add_subdirectory (Lab09)
add_subdirectory (Lab10)
add_subdirectory (Lab11)
add_subdirectory (Lab12)
